"Fix: Estabilización Backend Admin y mejoras UI Frontend
- BACKEND:
  - Revertido modelo Usuario a 'passwordHash' para compatibilidad BBDD.
  - AdminController: Inyección de PasswordEncoder y borrado en cascada (Transactional).
  - Añadidos métodos en Repositorios para búsquedas y borrados por entidad.
  - Corrección en búsqueda de partidos por equipo.

- FRONTEND:
  - AdminDashboard: Lógica de borrado de usuarios y navegación con parámetros.
  - AdminDashboard: Rediseño de pestaña 'Competición' con tarjetas visuales.
  - CalendarPage: Soporte para filtrar eventos por 'teamId' vía URL (modo Admi